# deterministic-ai-testing

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml  mockllm-snapshot-test.yml  test.yml
app/: main.py  models.py  openai_compat.py  scenarios.py  validation.py
deterministic_ai_testing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: curl_examples.sh  langchain_example.py  openai_sdk_example.py
examples/litellm/: README.md  example.py
examples/replay/: conversation.json
examples/vercel-ai-sdk/: README.md  example.mjs  package-lock.json  package.json
mockllm/: assertions.py  cli.py  pytest_plugin.py
mockllm/commands/: common.py  dashboard.py  init.py  replay.py  reports.py  serve.py  snapshot.py  state.py
scenarios/: default.yaml
scripts/: smoke_snapshot.sh
snapshots/: hello.json  refund.json  tool_call.json  tool_workflow.json
tests/: conftest.py  test_assertions.py  test_cli.py  test_pytest_plugin.py  test_server.py
