[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deterministic-ai-testing"
version = "0.2.0"
description = "Deterministic OpenAI-compatible testing infrastructure for AI apps and agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.4",
  "PyYAML==6.0.2",
  "httpx==0.28.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "openai>=1.59.7"
]

[project.scripts]
mockllm = "mockllm.cli:main"

[tool.setuptools]
packages = ["app", "mockllm"]
